--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=eAccessories
 #server
 server.port=9999
 #database
-spring.datasource.url=jdbc:mysql://localhost:3306/eAccessories
+spring.datasource.url=jdbc:mysql://localhost:3306/eaccessories
 spring.datasource.username=root
 spring.datasource.password=PHW#&71#dj
 #hibernate
