Used List to show the content of JSP file on the webpage. Import JSTL to the pom file

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -68,6 +69,15 @@
     		<artifactId>tomcat-embed-jasper</artifactId>
 		</dependency>
 
+		<!--JSTL dependency for retrieving the data from jsp to webpage-->
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet.jsp.jstl</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+		</dependency>
 		
 	</dependencies>
 
