--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,32 @@ spring.application.name=eAccessories
 
 #server
 server.port=9999
+
+
 #database
 spring.datasource.url=jdbc:mysql://localhost:3306/eaccessories
 spring.datasource.username=root
 spring.datasource.password=PHW#&71#dj
+
+
 #hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
 #views
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+
+# Gmail SMTP Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kk4766670@gmail.com
+spring.mail.password=zhmexnxmqfgnkkhi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
