--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,28 @@
  			<version>1.33.0</version>
  		</dependency>
 		
-		
+		<!-- Authorize.Net SDK dependency -->
+	    <dependency>
+	        <groupId>net.authorize</groupId>
+	        <artifactId>anet-java-sdk</artifactId>
+	        <version>2.0.7</version>
+	    </dependency>
+		       <!-- JAXB support for Java 11+ using javax.xml.bind -->
+	    <dependency>
+	        <groupId>javax.xml.bind</groupId>
+	        <artifactId>jaxb-api</artifactId>
+	        <version>2.3.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.glassfish.jaxb</groupId>
+	        <artifactId>jaxb-runtime</artifactId>
+	        <version>2.3.1</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.glassfish.jaxb</groupId>
+	        <artifactId>jaxb-core</artifactId>
+	        <version>2.3.0.1</version>
+	    </dependency>
 	</dependencies>
 
 	<build>
